# infoRates

./: .gitignore  CITATION.cff  CONTRIBUTING_NEW_DATASETS.md  EVALUATION_Timesform.md  EVALUATION_VIDEOMAE.md  PAPER_READY_EVALUATION.md  PROGRESS.md  README.md  config.yaml  data  fine_tuned_models  full_accv2026_pipeline.sh  plot_temporal_robustness.py  pyproject.toml  requirements.txt  setup.py  train_pipeline.sh
SSv2_data/: DOWNLOAD_INSTRUCTIONS.md
UCF101_data/: README.md
dashboard/: app.py  requirements.txt  run_dashboard.sh
docs/: ACCV_2026_ARCHITECTURE_AND_SAMPLING_PROTOCOL.md  ACCV_2026_DATASET_PREP.md  ACCV_2026_EXPERIMENT_TRACKER.md  ACCV_2026_H200_RUNBOOK.md  ACCV_2026_NEXT_STEPS.md  ACCV_2026_RESEARCH_PLAN.md  ACCV_2026_RUN_STATUS.md  COMPREHENSIVE_RESULTS_ANALYSIS.md  DATA_ANOMALY_ANALYSIS.md  EVALUATION_KINETICS400_TIMESFORMER.md  EVALUATION_TIMESFORMER.md  EVALUATION_Timesform.md  EVALUATION_UCF101_TIMESFORMER.md  EVALUATION_UCF101_TIMESFORMER_NEW.md  EVALUATION_UCF101_VIDEOMAE.md  EVALUATION_UCF101_VIVIT.md  SPECTRAL_ANALYSIS.md  TRA_SUMMARY.md  UNIFIED_GUIDE.md  VIDEOMAMBA3_PAPER_DRAFT.md  VIDEOMAMBA3_RELEASE.md  accv2026_dataset_download_manifest.example.json  aliasing_example.tex  baseline_tra_comparison_data.md  index.html
examples/: videomamba3_inference.py
paper/: FIGURES_INDEX.md  README.md  main.bib  main.tex  manuscript.tex  supplementary.tex
scripts/: archive_repo.py  build_clips.py  cleanup_ucf101.sh  download_hmdb51_torrent.sh  download_kinetics_mini.sh  download_wlasl.py  eval_ddp_all.sh  extract_frames.py  extract_rar.sh  generate_sensitivity_csv.py  pipeline_eval.sh  plot_per_class_distribution_by_coverage_videomae.py  plot_per_class_representative_videomae.py  plot_results.py  prepare_ucf101.py  run_eval.py  run_eval_backup.py  run_spectral_analysis.py  run_tra_experiments.sh  spectral_correlation_synthetic.py  statistical_analysis.py  train_ddp.sh  train_multimodel.py  train_something.py  train_timesformer.py  (+3 more)
(+25667 files in other folders)
