[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "info_rates"
version = "1.0.0"
description = "Spatiotemporal aliasing analysis for video action recognition — ACCV 2026"
authors = [
    {name = "Wesley Maia", email = "wesleymaia999@gmail.com"},
    {name = "Ross Greer"},
]
readme = "README.md"
license = {file = "paper/LICENSE"}
requires-python = ">=3.8"
keywords = ["video", "action recognition", "temporal sampling", "aliasing", "deep learning"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "torch",
    "torchvision",
    "transformers>=4.44.0",
    "decord",
    "av",
    "opencv-python",
    "tqdm",
    "pandas>=1.5",
    "numpy>=1.22",
    "scipy>=1.9",
    "matplotlib",
    "seaborn",
    "wandb",
    "pyyaml",
    "pytorchvideo",
    "fvcore",
    "iopath",
]

[project.optional-dependencies]
dashboard = [
    "streamlit>=1.32.0",
    "plotly>=5.18.0",
    "groq>=0.9.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]

[project.urls]
"Homepage" = "https://mi3-inforates.streamlit.app/"
"Paper" = "https://mi3-inforates.streamlit.app/"
"Repository" = "https://github.com/wesleyferreiramaia/infoRates"
"Bug Tracker" = "https://github.com/wesleyferreiramaia/infoRates/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"info_rates" = ["data/*.csv", "data/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
